5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3995/executions/1828_1657.log
== TEST (2019-06-12 14:18:27) 
-- CODE:
s=str(input(""))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:18:42) 
-- CODE:
s=str(input("")).upper
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:18:51) 
-- CODE:
s=str(input("")).upper
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:19:10) 
-- CODE:
s=(input("siglas:")).upper()

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:19:14) 
-- CODE:
s=(input("siglas:")).upper()

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:25:10) 
-- CODE:
s=(input("siglas:")).split(',')

v=zeros(5, dtype=int)
az=0
ca=0
fl=0
pa=0
wi=0

for i in range(len(s)):
	if(s[i]=="AZ"):
		az+=1
	elif(s[i]=="CA"):
		ac+=1
	elif(s[i]=="FL"):
		fl+=1
	elif(s[i]=="PA"):
		pa+=1
	elif(s[i]=="WI"):
		wi+=1
	
v[0]=az
v[1]=ca
v[2]=fl
v[3]=pa
v[4]=wi
print(max(v))
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    v=zeros(5, dtype=int)
NameError: name 'zeros' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:25:29) 
-- CODE:
s=(input("siglas:")).split(',')

v=zeros(5,dtype=int)
az=0
ca=0
fl=0
pa=0
wi=0

for i in range(len(s)):
	if(s[i]=="AZ"):
		az+=1
	elif(s[i]=="CA"):
		ac+=1
	elif(s[i]=="FL"):
		fl+=1
	elif(s[i]=="PA"):
		pa+=1
	elif(s[i]=="WI"):
		wi+=1
	
v[0]=az
v[1]=ca
v[2]=fl
v[3]=pa
v[4]=wi
print(max(v))
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    v=zeros(5,dtype=int)
NameError: name 'zeros' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:26:30) 
-- CODE:
from numpy import*
s=(input("siglas:")).split(',')
v=zeros(5, dtype=int)
az=0
ca=0
fl=0
pa=0
wi=0

for i in range(len(s)):
	if(s[i]=="AZ"):
		az+=1
	elif(s[i]=="CA"):
		ac+=1
	elif(s[i]=="FL"):
		fl+=1
	elif(s[i]=="PA"):
		pa+=1
	elif(s[i]=="WI"):
		wi+=1
	
v[0]=az
v[1]=ca
v[2]=fl
v[3]=pa
v[4]=wi
print(max(v))
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:26:50) 
-- CODE:
from numpy import*
s=(input("siglas:")).split(',')
v=zeros(5, dtype=int)
az=0
ca=0
fl=0
pa=0
wi=0

for i in range(len(s)):
	if(s[i]=="AZ"):
		az+=1
	elif(s[i]=="CA"):
		ca+=1
	elif(s[i]=="FL"):
		fl+=1
	elif(s[i]=="PA"):
		pa+=1
	elif(s[i]=="WI"):
		wi+=1
	
v[0]=az
v[1]=ca
v[2]=fl
v[3]=pa
v[4]=wi
print(max(v))
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:26:59) 
-- CODE:
from numpy import*
s=(input("siglas:")).split(',')
v=zeros(5, dtype=int)
az=0
ca=0
fl=0
pa=0
wi=0

for i in range(len(s)):
	if(s[i]=="AZ"):
		az+=1
	elif(s[i]=="CA"):
		ca+=1
	elif(s[i]=="FL"):
		fl+=1
	elif(s[i]=="PA"):
		pa+=1
	elif(s[i]=="WI"):
		wi+=1
	
v[0]=az
v[1]=ca
v[2]=fl
v[3]=pa
v[4]=wi
print(max(v))
print(v)
-- EXECUTION TIME:
1.0584
-- TEST CASE 1:
---- input:
FL,AZ,CA,CA,CA,CA,CA
---- correct output:
5
[1 5 1 0 0]
---- user output:
5
[1 5 1 0 0]
-- TEST CASE 2:
---- input:
FL,CA,WI,FL,WI,AZ,PA,WI,FL,PA
---- correct output:
3
[1 1 3 2 3]
---- user output:
3
[1 1 3 2 3]
-- TEST CASE 3:
---- input:
AZ,CA,AZ,WI,CA,AZ,PA,PA,FL,FL,CA,PA,AZ,FL,FL,PA,PA,PA,CA,FL,AZ,CA,PA
---- correct output:
7
[5 5 5 7 1]
---- user output:
7
[5 5 5 7 1]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:39:43) 
-- CODE:
from numpy import*
s=(input("siglas:")).split(',')
v=zeros(5, dtype=int)
az=0
ca=0
fl=0
pa=0
wi=0

for i in range(len(s)):
	if(s[i]=="AZ"):
		az+=1
	elif(s[i]=="CA"):
		ca+=1
	elif(s[i]=="FL"):
		fl+=1
	elif(s[i]=="PA"):
		pa+=1
	elif(s[i]=="WI"):
		wi+=1
	
v[0]=az
v[1]=ca
v[2]=fl
v[3]=pa
v[4]=wi
print(max(v))
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:39:59) 
-- CODE:
from numpy import*
s=(input("siglas:")).split(',')
v=zeros(5, dtype=int)
az=0
ca=0
fl=0
pa=0
wi=0

for i in range(len(s)):
	if(s[i]=="AZ"):
		az+=1
	elif(s[i]=="CA"):
		ca+=1
	elif(s[i]=="FL"):
		fl+=1
	elif(s[i]=="PA"):
		pa+=1
	elif(s[i]=="WI"):
		wi+=1
	
v[0]=az
v[1]=ca
v[2]=fl
v[3]=pa
v[4]=wi
print(max(v))
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:40:14) 
-- CODE:
from numpy import*
s=(input("siglas:")).split(',')
v=zeros(5, dtype=int)
az=0
ca=0
fl=0
pa=0
wi=0

for i in range(len(s)):
	if(s[i]=="AZ"):
		az+=1
	elif(s[i]=="CA"):
		ca+=1
	elif(s[i]=="FL"):
		fl+=1
	elif(s[i]=="PA"):
		pa+=1
	elif(s[i]=="WI"):
		wi+=1
	
v[0]=az
v[1]=ca
v[2]=fl
v[3]=pa
v[4]=wi
print(max(v))
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
